@@ -307,6 +307,8 @@ C_LIB = \
 	stdlib_startup.o \
 	stdlib_strtol.o \
 	stdlib_strtoul.o \
+	stdlib_strtoll.o \
+	stdlib_strtoull.o \
 	stdlib_swapstack.o \
 	stdlib_sysbase.o \
 	stdlib_system.o \
