@@ -302,6 +302,8 @@ C_LIB = \
 	stdlib_startup.o \
 	stdlib_strtol.o \
 	stdlib_strtoul.o \
+	stdlib_strtoll.o \
+	stdlib_strtoull.o \
 	stdlib_swapstack.o \
 	stdlib_system.o \
 	stdlib_termination_message.o \
