@@ -58,6 +58,12 @@
 
 /****************************************************************************/
 
+#define	LLONG_MIN	(-0x7fffffffffffffffLL-1)
+#define	LLONG_MAX	0x7fffffffffffffffLL
+#define	ULLONG_MAX	0xffffffffffffffffULL
+
+/****************************************************************************/
+
 #define PATH_MAX 1024
 
 /****************************************************************************/
